# fhatos

./: .gitignore  .wifi-template.ini  CMakeLists-paho-mqtt-fix.txt  CMakeLists-paho-mqtt-src-fix.txt  CMakeLists.txt  CNAME  Doxyfile  Doxyfile.in  NOTES.txt  README.md  abstract__scheduler_8hpp_source.html  actor_8hpp_source.html  algebra_8hpp_source.html  annotated.html  ansi_8hpp_source.html  binary__obj_8hpp_source.html  bluetooth_8hpp_source.html  bytecode_8hpp_source.html  classType.html  classes.html  classfhatos_1_1AbstractScheduler-members.html  classfhatos_1_1AbstractScheduler.html  classfhatos_1_1Actor-members.html  classfhatos_1_1Actor.html  classfhatos_1_1Algebra-members.html  classfhatos_1_1Algebra.html  classfhatos_1_1Ansi-members.html  classfhatos_1_1Ansi.html  classfhatos_1_1AsInst-members.html  classfhatos_1_1AsInst.html  classfhatos_1_1BaseIDed.html  classfhatos_1_1BinaryObj-members.html  classfhatos_1_1BinaryObj.html  classfhatos_1_1Bool-members.html  classfhatos_1_1Bool.html  classfhatos_1_1BranchInst-members.html  classfhatos_1_1BranchInst.html  classfhatos_1_1Bytecode-members.html  classfhatos_1_1Bytecode.html  classfhatos_1_1CPrinter-members.html  (+333 more)
docs/: CMakeLists.txt  fhatos.adoc  fhatos_index.adoc  fhatos_intro.adoc  fhatos_router.adoc  index.html  macros.tex  play.adoc
docs/css/: fhatos.css
docs/highlight/: DIGESTS.md  highlight.js  highlight.min.js
docs/highlight/languages/: bash.js  cpp.js  mmadt.js  mmadt.min.js
docs/highlight/styles/: androidstudio.css  arduino-light.css  ascetic.css  atom-one-dark-reasonable.css  brown-paper.css  codepen-embed.css  color-brewer.css  dark.css  docco.css  far.css  foundation.css  github.css  gml.css  gradient-dark.css  gradient-light.css  idea.css  kimbie-light.css  lioshi.css  magula.css  mono-blue.css  nnfx-light.css  panda-syntax-dark.css  paraiso-light.css  purebasic.css  routeros.css  school-book.css  shades-of-purple.css  srcery.css  tomorrow-night-blue.css  tomorrow-night-bright.css  vs2015.css
docs/html/: abstract__scheduler_8hpp_source.html  actor_8hpp_source.html  algebra_8hpp_source.html  annotated.html  ansi_8hpp_source.html  binary__obj_8hpp_source.html  classes.html  classfhatos_1_1_abstract_scheduler-members.html  classfhatos_1_1_abstract_scheduler.html  classfhatos_1_1_actor-members.html  classfhatos_1_1_actor.html  classfhatos_1_1_algebra-members.html  classfhatos_1_1_algebra.html  classfhatos_1_1_ansi-members.html  classfhatos_1_1_ansi.html  classfhatos_1_1_binary_obj-members.html  classfhatos_1_1_binary_obj.html  classfhatos_1_1_bool-members.html  classfhatos_1_1_bool.html  classfhatos_1_1_branch_inst-members.html  classfhatos_1_1_branch_inst.html  classfhatos_1_1_bytecode-members.html  classfhatos_1_1_bytecode.html  classfhatos_1_1_c_printer-members.html  classfhatos_1_1_c_printer.html  classfhatos_1_1_char_serializer-members.html  classfhatos_1_1_char_serializer.html  classfhatos_1_1_composition_inst-members.html  classfhatos_1_1_composition_inst.html  classfhatos_1_1_console-members.html  classfhatos_1_1_console.html  classfhatos_1_1_coroutine-members.html  classfhatos_1_1_coroutine.html  classfhatos_1_1_count_inst-members.html  classfhatos_1_1_count_inst.html  classfhatos_1_1_dereference_inst-members.html  classfhatos_1_1_dereference_inst.html  classfhatos_1_1_e_x_t_e_n_d_s-members.html  classfhatos_1_1_e_x_t_e_n_d_s.html  classfhatos_1_1_explain_inst-members.html  (+219 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_10.js  classes_11.js  classes_3.js  classes_4.js  classes_7.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  pages_1.js  searchdata.js
docs/src/: fhatos.adoc  fhatos.md
docs/src/runner/: boot_runner.cpp  fhatos-doc-code.py  (+3 more)
src/: CMakeLists.txt  boot.hpp  boot_config.hpp  boot_config_loader.hpp  boot_loader.hpp  boot_loader_mmadt.hpp  cached_headers.hpp  fhatos.adoc  fhatos.hpp  fhatos.md  fhatos_native.hpp  furi.cpp  furi.hpp  kernel.hpp  main.cpp  swarm.hpp  sys.hpp  test_fhatos.hpp  test_fhatos_fast.hpp  test_fhatos_native.hpp
src/kernel/: furi.hpp
src/lang/: error.hpp  fluent.hpp  insts.hpp  obj.hpp  type.hpp
src/language/: algebra.hpp  binary_obj.hpp  ext.mmadt  extensions.hpp  exts.hpp  f_bcode.hpp  fluent.hpp  instructions.hpp  insts.hpp  lexy_parser.hpp  main.cpp  mmadt.mmadt  obj.hpp  parser.hpp  processor.hpp  rewriter.hpp  serializer.hpp  type.hpp  types.hpp
src/model/: cluster.hpp  common.mmadt  console.hpp  distributed_memory.hpp  distributed_shared_memory.hpp  interface.hpp  log.hpp  math.mmadt  model.hpp  module.hpp  modules.hpp  program.hpp  shared_memory.hpp  sys.hpp  terminal.hpp  tool.hpp
src/native/: main.cpp  test.hpp
src/process/: abstract_scheduler.hpp  base_scheduler.hpp  obj_process.hpp  process.hpp  process_objs.hpp  x_process.hpp  x_scheduler.hpp
src/runner/: boot_runner.cpp  fhatos-doc-code.py  main_runner.cpp
src/structure/: f_bcode.hpp  f_simple.hpp  f_soc.hpp  furi.hpp  kernel.hpp  obj_structure.hpp  pubsub.hpp  q_proc.hpp  rooter.hpp  router.cpp  router.hpp  structure.cpp  structure.hpp  uri.hpp
src/util/: ansi.hpp  argv_parser.hpp  common_objs.hpp  enums.hpp  fhat_error.hpp  global.hpp  helper.hpp  i2c.hpp  lazy_iterator.hpp  logger.hpp  memory_helper.hpp  mutex.hpp  mutex_deque.hpp  mutex_map.hpp  mutex_rw.hpp  obj_helper.cpp  obj_helper.hpp  options.hpp  pretty.hpp  print_helper.hpp  ptr_helper.hpp  pubsub_helper.hpp  pubsub_manager.hpp  string_helper.hpp  string_printer.hpp  string_stream.hpp  uri.hpp  uuid.hpp
test/: CMakeLists.txt  test_basic.cpp  test_fhatos.hpp
test/doctest/: doctest.h
test/structure/: test_base_structure.cpp  test_base_structure.hpp  test_furi_boost.cpp
test/test_furi/: test_furi.cpp
test/test_furi_2/: test_furi_2.cpp
test/test_kernel/: test_kernel.cpp
test/test_main/: test_main.cpp
test/test_native/: test_native.cpp
(+785 files in other folders)
